[package]
name = "jshp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astra = "0.3"
glob = "0.3"
nom = "7.1"
nom_locate = "4.2"
lazy_static = { version = "1.4", features = [] }
mktemp = "0.5.1"
log = "0.4.20"
