[package]
name = "jshp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
lazy_static = { version = "1.4", features = [] }
mktemp = "0.5.1"

nom = "7.1"
nom_locate = "4.2"

astra = "0.3"

rusty_v8 = { version = "0.32", features = [] }

